2008-07-14  Martin Rudalics  <rudalics@gmx.at>

	* add-log.el (change-log-goto-source): Avoid wrong-type-argument
	error when change-log-search-file-name returns nil.

2008-07-13  Martin Rudalics  <rudalics@gmx.at>

	* add-log.el (change-log-search-file-name): Use match-string-no-properties.
	(change-log-search-tag-name-1, change-log-search-tag-name)
	(change-log-goto-source-1, change-log-goto-source): New functions.
	(change-log-tag-re, change-log-find-head, change-log-find-tail):
	New variables.
	(change-log-mode-map): Bind C-c C-c to change-log-goto-source.

2008-07-13  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc-help.el (calc-describe-key): Add angles to special key
	descriptions.

2008-07-13  Vincent Belaïche  <vincent.b.1@hotmail.fr>

	* calc-help.el (calc-describe-thing): Use `re-search-forward' to
	search for regexp.

2008-07-12  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-visual): Handle null pixel position
	gracefully.

2008-07-11  Jason Rumney  <jasonr@gnu.org>

        * files.el (file-truename): Get truename of ancestors if file does
        not exist on Windows.

2008-07-11  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move-visual): Obey goal-column and no-error arg.
	(track-eol, temporary-goal-column, previous-line, next-line):
	Update docstring.
	(move-end-of-line, move-beginning-of-line): Bind line-move-visual
	to nil.

2008-07-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (line-move-visual): New var.
	(line-move-visual): New function.
	(line-move): Call line-move-visual.

2008-07-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/grep.el (grep-files-aliases): Improve the C++ source
	pattern and add patterns for C++ header files.

2008-07-10  Chong Yidong  <cyd@stupidchicken.com>

	* window.el (truncated-partial-width-window-p): New function.

	* menu-bar.el: Remove Longlines mode from menu.  Add word-wrap
	option.

	* faces.el (x-create-frame-with-faces): Don't pass parameters that